--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-include_directories(third-party/eigen)
+#include_directories(third-party/eigen)
 
 set(CMAKE_CXX_FLAGS "-Wall -std=c++0x -std=c++11 -O2 -O3")
 include_directories(lib/include)
